// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textfield /> should render 1`] = `
<div>
  <div
    className="mdc-textfield"
  >
    <input
      className="mdc-textfield__input"
      id="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
      onChange={[Function]}
      type="text"
    />
    <label
      className="mdc-textfield__label"
      htmlFor="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
    />
  </div>
</div>
`;

exports[`<Textfield /> should render as required 1`] = `
<div>
  <div
    className="mdc-textfield"
  >
    <input
      className="mdc-textfield__input"
      id="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
      onChange={[Function]}
      required={true}
      type="text"
    />
    <label
      className="mdc-textfield__label"
      htmlFor="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
    >
      this is my label
    </label>
  </div>
</div>
`;

exports[`<Textfield /> should render with a helpText 1`] = `
<div>
  <div
    className="mdc-textfield"
  >
    <input
      className="mdc-textfield__input"
      id="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
      onChange={[Function]}
      type="text"
      value="this is my value"
    />
    <label
      className="mdc-textfield__label"
      htmlFor="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
    >
      this is my label
    </label>
  </div>
  <p
    aria-hidden="true"
    className="mdc-textfield-helptext"
    id="mdc-textfield-helptext--2e732f05-f466-4fba-acb5-2f3be58daf75"
  >
    this is my helpText
  </p>
</div>
`;

exports[`<Textfield /> should render with a label 1`] = `
<div>
  <div
    className="mdc-textfield"
  >
    <input
      className="mdc-textfield__input"
      id="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
      onChange={[Function]}
      type="text"
    />
    <label
      className="mdc-textfield__label"
      htmlFor="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
    >
      this is my label
    </label>
  </div>
</div>
`;

exports[`<Textfield /> should render with a value 1`] = `
<div>
  <div
    className="mdc-textfield"
  >
    <input
      className="mdc-textfield__input"
      id="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
      onChange={[Function]}
      type="text"
      value="this is my value"
    />
    <label
      className="mdc-textfield__label"
      htmlFor="mdc-textfield--2e732f05-f466-4fba-acb5-2f3be58daf75"
    >
      this is my label
    </label>
  </div>
</div>
`;
